# surrealdb-starter-taurikit

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: error.rs  macros.rs  main.rs
src-tauri/src/ipc/: mod.rs  params.rs  person.rs  response.rs
src-tauri/src/model/: mod.rs  store.rs  try_from.rs  types.rs
src-tauri/src/model/types/: general.rs  mod.rs  person.rs  types.rs
src/api/: api.ts  ipc.ts
src/app/: globals.css  greet.tsx  layout.tsx  page.module.css  page.tsx
src/app/components/: AddPerson.tsx  ListPerson.tsx  index.ts
src/bindings/: Name.ts  Page.ts  Person.ts  PersonForCreate.ts  PersonForUpdate.ts  index.ts
