[package]
name = "surrealdb-starter-taurikit"
version = "0.1.0"
description = "A starter-kit project from which to create your Tauri + SurrealDB projects"
authors = ["reymon"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with_macros = "3"
tauri = { version = "1.5.0", features = [] }
surrealdb = {version = "1.0.0-beta.9", default-features=false, features = ['kv-mem'] }
ts-rs = { version = "7" }

[dev-dependencies]
anyhow = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
